--- a/pages/lacabana.html
+++ b/pages/lacabana.html
@@ -123,7 +123,7 @@
                   </div>
                   <div class="col d-flex justify-content-end align-items-end">
                       <a href="#"><img src="../images/facebook.png" alt="facebook" class="images_footer" ></a>
-                      <a href="#"><img src="../images/instagram-512.webp" alt="instagram" class="images_footer"></a>
+                      <a href="#"><img src="../images/instagram.webp" alt="instagram" class="images_footer"></a>
                       <a href="#"><img src="../images/whatsapp.png" alt="whatsapp" class="images_footer"></a>
                   </div>
               </div>
