Logos de redes corregidos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -150,7 +150,7 @@
                   </div>
                   <div class="col d-flex justify-content-end align-items-end">
                       <a href="#"><img src="../images/facebook.png" alt="facebook" class="images_footer" ></a>
-                      <a href="#"><img src="../images/instagram" alt="instagram" class="images_footer"></a>
+                      <a href="#"><img src="../images/instagram.webp" alt="instagram" class="images_footer"></a>
                       <a href="#"><img src="../images/whatsapp.png" alt="whatsapp" class="images_footer"></a>
                   </div>
               </div>
